--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
@@ -19,6 +20,7 @@
     "mongoose": "^5.3.12",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
+    "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "rotating-file-stream": "^1.3.9",
     "socket.io": "^2.1.1",
